@@ -6,10 +6,12 @@ import com.objectcomputing.checkins.services.fixture.TeamFixture;
 import com.objectcomputing.checkins.services.kudos.kudos_recipient.KudosRecipient;
 import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
 import com.objectcomputing.checkins.services.team.Team;
+import io.micronaut.core.type.Argument;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.MutableHttpRequest;
+import io.micronaut.http.client.BlockingHttpClient;
 import io.micronaut.http.client.HttpClient;
 import io.micronaut.http.client.annotation.Client;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
@@ -42,7 +44,9 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
     @Inject
     @Client("/services/kudos")
-    HttpClient client;
+    HttpClient httpClient;
+
+    BlockingHttpClient client;
 
     private String message;
     private UUID senderId;
@@ -52,6 +56,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
     @BeforeEach
     void setUp() {
+        client = httpClient.toBlocking();
         MemberProfile sender = createADefaultMemberProfile();
         MemberProfile recipient = createASecondDefaultMemberProfile();
         Team team = createDefaultTeam();
@@ -62,23 +67,26 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         teamId = team.getId();
     }
 
-    @AfterEach
-    void tearDown() {
-    }
-
     @ParameterizedTest
-    @CsvSource({"false, false", "false, true", "true, false", "true, true"})
+    @CsvSource({
+            "false, false",
+            "false, true",
+            "true, false",
+            "true, true"
+    })
     void testCreateKudos(boolean supplyTeam, boolean publiclyVisible) {
-        KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(message, senderId, supplyTeam ? teamId : null, publiclyVisible, recipientMembers);
+        KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(
+                message,
+                senderId,
+                supplyTeam ? teamId : null,
+                publiclyVisible,
+                recipientMembers
+        );
 
-        HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
-        HttpResponse<Kudos> httpResponse = client.toBlocking().exchange(request, Kudos.class);
+        HttpRequest<KudosCreateDTO> request = HttpRequest.POST("/", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
+        HttpResponse<Kudos> httpResponse = client.exchange(request, Kudos.class);
 
-        assertNotNull(httpResponse);
-        Optional<Kudos> body = httpResponse.getBody();
-        assertTrue(body.isPresent());
-        Kudos kudos = body.get();
-        assertNotNull(kudos);
+        Kudos kudos = httpResponse.body();
         assertEquals(message, kudos.getMessage());
         assertEquals(publiclyVisible, kudos.getPubliclyVisible());
         assertEquals(senderId, kudos.getSenderId());
@@ -87,10 +95,8 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         assertNull(kudos.getDateApproved());
 
         List<KudosRecipient> kudosRecipients = findKudosRecipientByKudosId(kudos.getId());
-        assertNotNull(kudosRecipients);
         assertEquals(1, kudosRecipients.size());
-        KudosRecipient kudosRecipient = kudosRecipients.getFirst();
-        assertEquals(recipientMembers.getFirst().getId(), kudosRecipient.getMemberId());
+        assertEquals(recipientMembers.getFirst().getId(), kudosRecipients.getFirst().getMemberId());
     }
 
     @Test
@@ -98,11 +104,10 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(message, senderId, null, true, recipientMembers);
 
         HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
-        assertEquals("You are not authorized to do this operation", responseException.getMessage());
+        assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
+        assertEquals(NOT_AUTHORIZED_MSG, responseException.getMessage());
     }
 
     @Test
@@ -111,11 +116,10 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(message, nonExistentSenderId, null, true, recipientMembers);
 
         HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
-        String expectedMessage = MessageFormat.format("Kudos sender {0} does not exist", nonExistentSenderId);
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
+        String expectedMessage = "Kudos sender %s does not exist".formatted(nonExistentSenderId);
         assertEquals(expectedMessage, responseException.getMessage());
     }
 
@@ -125,11 +129,10 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(message, senderId, nonExistentTeamId, true, recipientMembers);
 
         HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
-        String expectedMessage = MessageFormat.format("Team {0} does not exist", nonExistentTeamId);
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
+        String expectedMessage = "Team %s does not exist".formatted(nonExistentTeamId);
         assertEquals(expectedMessage, responseException.getMessage());
     }
 
@@ -138,11 +141,12 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         KudosCreateDTO kudosCreateDTO = new KudosCreateDTO("", senderId, null, true, recipientMembers);
 
         HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
         assertEquals("Bad Request", responseException.getMessage());
+        String body = responseException.getResponse().getBody(String.class).get();
+        assertTrue(body.contains("kudos.message: must not be blank"), body + " should contain 'kudos.message: must not be blank");
     }
 
     @Test
@@ -150,25 +154,22 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         KudosCreateDTO kudosCreateDTO = new KudosCreateDTO(message, senderId, null, true, Collections.emptyList());
 
         HttpRequest<KudosCreateDTO> request = HttpRequest.POST("", kudosCreateDTO).basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
         assertEquals("Kudos must contain at least one recipient", responseException.getMessage());
     }
 
     @Test
     void testApproveKudos() {
         Kudos kudos = createADefaultKudos(senderId);
+        assertNull(kudos.getDateApproved());
 
-        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos)
-                .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<Kudos> response = client.toBlocking().exchange(request, Kudos.class);
+        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos).basicAuth("", ADMIN_ROLE);
+        final HttpResponse<Kudos> response = client.exchange(request, Kudos.class);
 
         assertEquals(HttpStatus.OK, response.getStatus());
-        Kudos returnedKudos = response.body();
-        assertNotNull(returnedKudos);
-        assertNotNull(returnedKudos.getDateApproved());
+        assertEquals(LocalDate.now(), response.body().getDateApproved());
     }
 
     @Test
@@ -177,40 +178,32 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         UUID nonExistentKudosId = UUID.randomUUID();
         kudos.setId(nonExistentKudosId);
 
-        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos)
-                .basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos).basicAuth("", ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
-        String expectedMessage = MessageFormat.format("Kudos with id {0} does not exist", nonExistentKudosId);
-        assertEquals(expectedMessage, responseException.getMessage());
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
+        assertEquals("Kudos with id %s does not exist".formatted(nonExistentKudosId), responseException.getMessage());
     }
 
     @Test
     void testApproveAlreadyApprovedKudos() {
         Kudos kudos = createApprovedKudos(senderId);
 
-        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos)
-                .basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos).basicAuth("", ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
-        String expectedMessage = MessageFormat.format("Kudos with id {0} has already been approved", kudos.getId());
-        assertEquals(expectedMessage, responseException.getMessage());
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
+        assertEquals("Kudos with id %s has already been approved".formatted(kudos.getId()), responseException.getMessage());
     }
 
     @Test
     void testApproveKudosWithoutAdminRole() {
         Kudos kudos = createADefaultKudos(senderId);
 
-        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos)
-                .basicAuth("", MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, Kudos.class);
-        });
+        final HttpRequest<Kudos> request = HttpRequest.PUT("", kudos).basicAuth("", MEMBER_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, Kudos.class));
 
+        assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
     }
 
@@ -219,25 +212,28 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         Kudos kudos = createADefaultKudos(senderId);
         createKudosRecipient(kudos.getId(), recipientMembers.get(0).getId());
 
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
-                .basicAuth("", ADMIN_ROLE);
-        HttpResponse<KudosResponseDTO> response = client.toBlocking().exchange(request, KudosResponseDTO.class);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId())).basicAuth("", ADMIN_ROLE);
+        HttpResponse<KudosResponseDTO> response = client.exchange(request, KudosResponseDTO.class);
 
         assertEquals(OK, response.getStatus());
+        assertEquals(kudos.getId(), response.body().getId());
+        assertEquals(kudos.getMessage(), response.body().getMessage());
+        assertEquals(kudos.getSenderId(), response.body().getSenderId());
+        assertEquals(kudos.getDateCreated(), response.body().getDateCreated());
+        assertEquals(kudos.getDateApproved(), response.body().getDateApproved());
+        assertEquals(kudos.getPubliclyVisible(), response.body().getPubliclyVisible());
+        assertEquals(List.of(recipientMembers.getFirst()), response.body().getRecipientMembers());
     }
 
     @Test
     void testGetKudosByIdWithNoRecipients() {
         Kudos kudos = createADefaultKudos(senderId);
 
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
-                .basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, KudosResponseDTO.class);
-        });
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId())).basicAuth("", ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, KudosResponseDTO.class));
 
-        String expectedMessage = MessageFormat.format("Could not find recipients for kudos with id {0}", kudos.getId());
-        assertEquals(expectedMessage, responseException.getMessage());
+        assertEquals(HttpStatus.NOT_FOUND, responseException.getStatus());
+        assertEquals("Could not find recipients for kudos with id %s".formatted(kudos.getId()), responseException.getMessage());
     }
 
     @Test
@@ -246,7 +242,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", nonExistentId))
                 .basicAuth("", ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, KudosResponseDTO.class);
+            client.exchange(request, KudosResponseDTO.class);
         });
 
         String expectedMessage = MessageFormat.format("Kudos with id {0} does not exist", nonExistentId);
@@ -261,7 +257,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
                 .basicAuth("", MEMBER_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, KudosResponseDTO.class);
+            client.exchange(request, KudosResponseDTO.class);
         });
 
         assertEquals(NOT_AUTHORIZED_MSG, responseException.getMessage());
@@ -274,7 +270,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
         final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
                 .basicAuth(senderWorkEmail, MEMBER_ROLE);
-        HttpResponse<KudosResponseDTO> response = client.toBlocking().exchange(request, KudosResponseDTO.class);
+        HttpResponse<KudosResponseDTO> response = client.exchange(request, KudosResponseDTO.class);
 
         assertEquals(OK, response.getStatus());
         Optional<KudosResponseDTO> body = response.getBody();
@@ -288,12 +284,10 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         Kudos kudos = createApprovedKudos(senderId);
         createKudosRecipient(kudos.getId(), recipientMembers.get(0).getId());
 
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
-                .basicAuth("", MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request, KudosResponseDTO.class);
-        });
+        final HttpRequest<?> request = HttpRequest.GET("/%s".formatted(kudos.getId())).basicAuth("", MEMBER_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request, KudosResponseDTO.class));
 
+        assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals(NOT_AUTHORIZED_MSG, responseException.getMessage());
     }
 
@@ -302,15 +296,18 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         Kudos kudos = createApprovedKudos(senderId);
         createKudosRecipient(kudos.getId(), recipientMembers.get(0).getId());
 
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/%s", kudos.getId()))
-                .basicAuth(recipientMembers.get(0).getWorkEmail(), MEMBER_ROLE);
-        HttpResponse<KudosResponseDTO> response = client.toBlocking().exchange(request, KudosResponseDTO.class);
+        final HttpRequest<?> request = HttpRequest.GET("/%s".formatted(kudos.getId())).basicAuth(recipientMembers.get(0).getWorkEmail(), MEMBER_ROLE);
+        HttpResponse<KudosResponseDTO> response = client.exchange(request, KudosResponseDTO.class);
 
         assertEquals(OK, response.getStatus());
-        Optional<KudosResponseDTO> body = response.getBody();
-        assertTrue(body.isPresent());
-        KudosResponseDTO kudosResponseDTO = body.get();
-        assertNotNull(kudosResponseDTO);
+        KudosResponseDTO kudosResponseDTO = response.body();
+        assertEquals(kudos.getId(), kudosResponseDTO.getId());
+        assertEquals(kudos.getMessage(), kudosResponseDTO.getMessage());
+        assertEquals(kudos.getSenderId(), kudosResponseDTO.getSenderId());
+        assertEquals(kudos.getDateCreated(), kudosResponseDTO.getDateCreated());
+        assertEquals(kudos.getDateApproved(), kudosResponseDTO.getDateApproved());
+        assertEquals(kudos.getPubliclyVisible(), kudosResponseDTO.getPubliclyVisible());
+        assertEquals(List.of(recipientMembers.get(0)), kudosResponseDTO.getRecipientMembers());
     }
 
     @Test
@@ -319,15 +316,19 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
         UUID recipientId = recipientMembers.getFirst().getId();
         createKudosRecipient(kudos.getId(), recipientId);
 
-        MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/?recipientId=%s", recipientId))
-                .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<List> response = client.toBlocking().exchange(request, List.class);
+        MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/?recipientId=%s", recipientId)).basicAuth("", ADMIN_ROLE);
+        final HttpResponse<List<KudosResponseDTO>> response = client.exchange(request, Argument.listOf(KudosResponseDTO.class));
 
         assertEquals(OK, response.getStatus());
-        Optional<List> body = response.getBody();
-        assertTrue(body.isPresent());
-        List list = body.get();
-        assertNotNull(list);
+        assertEquals(1, response.body().size());
+        KudosResponseDTO element = response.body().getFirst();
+        assertEquals(element.getId(), kudos.getId());
+        assertEquals(element.getMessage(), kudos.getMessage());
+        assertEquals(element.getSenderId(), kudos.getSenderId());
+        assertEquals(element.getDateCreated(), kudos.getDateCreated());
+        assertEquals(element.getDateApproved(), kudos.getDateApproved());
+        assertEquals(element.getPubliclyVisible(), kudos.getPubliclyVisible());
+        assertEquals(List.of(recipientMembers.getFirst()), element.getRecipientMembers());
     }
 
     @Test
@@ -337,7 +338,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
         MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/?senderId=%s", senderId))
                 .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<List> response = client.toBlocking().exchange(request, List.class);
+        final HttpResponse<List> response = client.exchange(request, List.class);
 
         assertEquals(OK, response.getStatus());
         Optional<List> body = response.getBody();
@@ -354,7 +355,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
         MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/?isPending=%s", isPending))
                 .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<List> response = client.toBlocking().exchange(request, List.class);
+        final HttpResponse<List> response = client.exchange(request, List.class);
 
         assertEquals(OK, response.getStatus());
         Optional<List> body = response.getBody();
@@ -372,7 +373,7 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
 
         MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/?isPublic=%s", isPublic))
                 .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<List> response = client.toBlocking().exchange(request, List.class);
+        final HttpResponse<List> response = client.exchange(request, List.class);
 
         assertEquals(OK, response.getStatus());
         Optional<List> body = response.getBody();
@@ -386,9 +387,8 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
     void testDeleteKudos() {
         Kudos kudos = createADefaultKudos(senderId);
 
-        final HttpRequest<Object> request = HttpRequest.DELETE(String.format("/%s", kudos.getId()))
-                .basicAuth("", ADMIN_ROLE);
-        final HttpResponse<Kudos> response = client.toBlocking().exchange(request);
+        final HttpRequest<Object> request = HttpRequest.DELETE("/%s".formatted(kudos.getId())).basicAuth("", ADMIN_ROLE);
+        final HttpResponse<Kudos> response = client.exchange(request);
 
         assertEquals(NO_CONTENT, response.getStatus());
     }
@@ -396,26 +396,22 @@ class KudosControllerTest extends TestContainersSuite implements KudosFixture, T
     @Test
     void testDeleteKudosWithNonExistentKudosId() {
         UUID nonExistentKudosId = UUID.randomUUID();
-        final HttpRequest<Object> request = HttpRequest.DELETE(String.format("/%s", nonExistentKudosId))
-                .basicAuth("", ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request);
-        });
 
-        String expectedMessage = "Kudos with id " + nonExistentKudosId + " does not exist";
-        assertEquals(expectedMessage, responseException.getMessage());
+        final HttpRequest<Object> request = HttpRequest.DELETE("/%s".formatted(nonExistentKudosId)).basicAuth("", ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request));
+
+        assertEquals(HttpStatus.NOT_FOUND, responseException.getStatus());
+        assertEquals("Kudos with id %s does not exist".formatted(nonExistentKudosId), responseException.getMessage());
     }
 
     @Test
     void testDeleteKudosWithoutAdminRole() {
         Kudos kudos = createADefaultKudos(senderId);
 
-        HttpRequest<Object> request = HttpRequest.DELETE(String.format("/%s", kudos.getId()))
-                .basicAuth("", MEMBER_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> {
-            client.toBlocking().exchange(request);
-        });
+        HttpRequest<Object> request = HttpRequest.DELETE(String.format("/%s", kudos.getId())).basicAuth("", MEMBER_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.exchange(request));
 
+        assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
     }
 }
